--- a/src/options.html
+++ b/src/options.html
@@ -3,6 +3,12 @@
 <head>
 </head>
 <body>
+  <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
   <label>
     <input type="checkbox" id="optOutAnalytics">
     <span>Opt-out of Google Analytics</span>
