--- a/src/options.html
+++ b/src/options.html
@@ -3,16 +3,13 @@
 <head>
 </head>
 <body>
-  <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-</div>
   <label>
     <input type="checkbox" id="optOutAnalytics">
     <span>Opt-out of Google Analytics</span>
+    <p style="color:#a1a1a1";>By default, Google Analytics will collect small bits of data. By opting out, no future data will ever be sent to Google, until you opt in again.</p>
   </label>
   <script src="options.js"></script>
+  <br>
+  <a href="https://github.com/sleepiie/simple-pip" target="_blank" style="text-decoration: none;">View source</a>
 </body>
 </html>
