--- a/src/options.html
+++ b/src/options.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    body {
+      background-color: #202124;
+    }
+  </style>
 </head>
 <body>
   <label>
     <input type="checkbox" id="optOutAnalytics">
-    <span>Opt-out of Google Analytics</span>
+    <span style="color:#ffffff";>Opt-out of Google Analytics</span>
     <p style="color:#a1a1a1";>By default, Google Analytics will collect small bits of data. By opting out, no future data will ever be sent to Google, until you opt in again.</p>
   </label>
   <script src="options.js"></script>
   <br>
-  <a href="https://github.com/sleepiie/simple-pip" target="_blank" style="text-decoration: none;">View source</a>
+  <a href="https://github.com/sleepiie/simple-pip" target="_blank" style="color:#ffffff";>View source</a>
 </body>
 </html>
