Global username change

--- a/src/options.html
+++ b/src/options.html
@@ -15,6 +15,6 @@
   </label>
   <script src="options.js"></script>
   <br>
-  <a href="https://github.com/frogweezer/simple-pip" target="_blank" style="color:#ffffff";>View source</a>
+  <a href="https://github.com/ayvacs/simple-pip" target="_blank" style="color:#ffffff";>View source</a>
 </body>
 </html>
